Nav mobile spacing fix

--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -55,8 +55,10 @@ $header-height: 6rem;
     justify-content: center;
     align-items: center;
     padding-top: 2em;
+    padding-bottom: 2em;
     @media (min-width: 768px) {
         padding-top: 0;
+        padding-bottom: 0;
     }
     &__link {
         display: flex;
